# icub-eye-tracking

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  rebuild.sh  run.sh  shutdown.sh
include/: GazeThread.h  PlotWindow.h
src/: CMakeLists.txt  GazeThread.cpp  PlotWindow.cpp  main.cpp
